# Whisper

./: .gitignore  pyproject.toml
whisper-backend/: pyproject.toml
whisper-backend/whisper_backend/: db.sqlite3
whisper-backend/whisper_backend/config/: admin.py  models.py  utils.py
whisper-backend/whisper_backend/config/migrations/: 0001_initial.py
whisper-backend/whisper_backend/files/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
whisper-backend/whisper_backend/files/migrations/: 0001_initial.py  0002_file_directory.py
whisper-backend/whisper_backend/whisper_backend/: settings.py  urls.py
whisper-frontend/: package-lock.json  package.json
whisper-frontend/src/: App.css  App.js
whisper-frontend/src/components/Header/: Header.css  Header.js
whisper-frontend/src/components/Home/: Home.css  Home.js
whisper-frontend/src/components/Menu/: Menu.css  Menu.js
whisper_backend/: manage.py  pyproject.toml  requirements.txt
whisper_backend/config/: admin.py  apps.py  models.py  signals.py  urls.py
whisper_backend/files/: apps.py  config_operations.py  db_operations.py  file_operations.py  models.py
whisper_backend/whisper_backend/: create_db.py  settings.py  urls.py
whisper_backend/whisper_backend/whisper_backend/: manage.py
whisper_backend/whisper_backend/whisper_backend/config/: apps.py  models.py  views.py
whisper_backend/whisper_backend/whisper_backend/files/: admin.py  models.py
whisper_backend/whisper_backend/whisper_backend/whisper_backend/: create_db.py  settings.py
